Refactor and enhance dialog and sorting functionality.
Updated workdir dialog for modality and movable behavior. Separated and optimized drive info SQL operations into a dedicated class. Introduced `Comparators` utility class for sorting with tests, and refactored sort and GUI naming conventions.